--- a/Example/PrebidDemoJava/build.gradle
+++ b/Example/PrebidDemoJava/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     setCompileSdkVersion(33)
@@ -51,4 +52,8 @@ dependencies {
 
     // Image Downloader
     implementation "com.github.bumptech.glide:glide:4.14.2"
+
+    // Kotlin
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
