--- a/PrebidMobile/PrebidMobile-core/build.gradle
+++ b/PrebidMobile/PrebidMobile-core/build.gradle
@@ -2,6 +2,8 @@ apply from: '../android.gradle'
 apply from: '../publisher.gradle'
 apply from: '../tests.gradle'
 
+apply plugin: 'kotlin-android'
+
 android {
     def getGitHash = { ->
         def stdout = new ByteArrayOutputStream()
@@ -30,4 +32,8 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.15.1'
 
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.0.0"
+
+    // Kotlin
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
