--- a/PrebidMobile/PrebidMobile-maxAdapters/build.gradle
+++ b/PrebidMobile/PrebidMobile-maxAdapters/build.gradle
@@ -2,7 +2,17 @@ apply from: '../android.gradle'
 apply from: '../publisher.gradle'
 apply from: '../tests.gradle'
 
+apply plugin: 'kotlin-android'
+
 dependencies {
     implementation project(":PrebidMobile")
     implementation "com.applovin:applovin-sdk:11.3.2"
+
+    // Kotlin
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+
+repositories {
+    mavenCentral()
 }
