--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,7 @@ org.gradle.daemon=true
 org.gradle.caching=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 #android.useAndroidX and android.enableJetifier are specified in each module separately
