--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 #android.useAndroidX and android.enableJetifier are specified in each module separately
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
